Initial push contains SQL practice page

--- a/BackendSuggestor/Dockerfile
+++ b/BackendSuggestor/Dockerfile
@@ -1,35 +1,23 @@
-# ---- Build stage ----
 FROM maven:3.9-eclipse-temurin-17 AS builder
 WORKDIR /usr/src/app
 COPY pom.xml .
-# Retry downloading dependencies to handle transient network issues
 RUN set -e; for i in 1 2 3; do \
   mvn -B -q -e -DskipTests dependency:go-offline && break || { \
     echo "Maven go-offline failed (attempt $i). Retrying in 5s..."; sleep 5; \
   }; \
 done
 COPY src ./src
-# Retry packaging as well
 RUN set -e; for i in 1 2 3; do \
   mvn -B -q -DskipTests package && break || { \
     echo "Maven package failed (attempt $i). Retrying in 5s..."; sleep 5; \
   }; \
 done
 
-# ---- Runtime stage ----
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-# Copy app JAR and dependency jars copied by maven-dependency-plugin
-COPY --from=builder /usr/src/app/target/imdb-practice-backend-0.1.0.jar /app/app.jar
+COPY --from=builder /usr/src/app/target/imdb-backend-suggestor-0.1.0.jar /app/app.jar
 COPY --from=builder /usr/src/app/target/dependency /app/dependency
-# Config
-ENV PORT=3001 \
-    DB_HOST=db \
-    DB_PORT=5432 \
-    DB_NAME=imdb \
-    DB_USER=postgres \
-    DB_PASSWORD=postgres \
+ENV PORT=3010 \
     QUERY_TIMEOUT_SECONDS=10
-EXPOSE 3001
-# Use classpath with dependency/* since jar is not shaded
-CMD ["java","-cp","/app/app.jar:/app/dependency/*","com.imdb.practice.App"]
+EXPOSE 3010
+CMD ["java","-cp","/app/app.jar:/app/dependency/*","com.imdb.suggestor.App"]
