--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -19,4 +19,14 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
+
+  # Proxy Suggestor to suggestor service inside the compose network
+  location /suggestor/ {
+    proxy_pass http://imdb_suggestor:3010/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 }
