--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,32 +1,76 @@
 server {
   listen 80;
-  server_name _;
+  server_name localhost;
+  client_max_body_size 20M;
 
+  # Set the root directory for serving files
   root /usr/share/nginx/html;
   index index.html;
 
-  # Frontend SPA
+  # Handle the root path
+  location = / {
+    try_files $uri $uri/ /index.html;
+  }
+
+  # Handle SPA routing
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 
-  # Proxy API to backend service inside the compose network
+  # Proxy API to backend service
   location /api/ {
-    proxy_pass http://imdb_backend:3001;
+    proxy_pass http://imdb-backend:3001/api/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_redirect off;
+    
+    # Handle WebSocket connections if needed
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    
+    # Increase timeouts if needed
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+    send_timeout 60s;
   }
 
-  # Proxy Suggestor to suggestor service inside the compose network
-  location /suggestor/ {
-    proxy_pass http://imdb_suggestor:3010/;
+  # Proxy Suggestor service
+  location /suggestor/api/ {
+    proxy_pass http://imdb-suggestor:3010/api/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_redirect off;
+    
+    # Handle WebSocket connections if needed
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    
+    # Increase timeouts if needed
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+  }
+
+  # Add headers for the served files
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    expires 1y;
+    add_header Cache-Control "public, no-transform";
+    try_files $uri =404;
+  }
+  
+  # Disable caching for HTML files
+  location ~* \.html$ {
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires 0;
   }
 }
