Add automated permission setting with fix-permissions service
- Add busybox fix-permissions service to both compose files
- Set dependency on fix-permissions completion for init-downloader
- Remove manual chmod step from deployment instructions
- Update README to reflect automated permission handling
- Simplify deployment process for better user experience

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,16 @@
 version: "3.9"
 
 services:
+  fix-permissions:
+    image: busybox
+    command: sh -c "chmod -R 777 /data"
+    volumes:
+      - ./data:/data
+
   init-downloader:
+    depends_on:
+      fix-permissions:
+        condition: service_completed_successfully
     image: curlimages/curl:latest
     container_name: imdb-downloader
     command: >
