--- a/docker-compose-hub.yml
+++ b/docker-compose-hub.yml
@@ -1,8 +1,17 @@
 version: "3.9"
 
 services:
+  fix-permissions:
+    image: busybox
+    command: sh -c "chmod -R 777 /data"
+    volumes:
+      - ./data:/data
+
   # Data downloader - downloads IMDb datasets
   init-downloader:
+    depends_on:
+      fix-permissions:
+        condition: service_completed_successfully
     image: curlimages/curl:latest
     container_name: imdb-downloader
     command: >
