--- a/docker-compose-hub.yml
+++ b/docker-compose-hub.yml
@@ -56,6 +56,41 @@ services:
     volumes:
       - ./data:/data
 
+  wait-for-data:
+    image: postgres:15
+    container_name: imdb-wait-for-data
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: imdb
+      DB_USER: imdb
+    command: >
+      sh -c "
+        until pg_isready -h $$DB_HOST -p $$DB_PORT -U $$DB_USER; do
+          echo 'Waiting for database to be ready...'
+          sleep 2
+        done
+        
+        echo 'Checking if data import is complete...'
+        until psql -h $$DB_HOST -p $$DB_PORT -U $$DB_USER -d $$DB_NAME -c \"SELECT COUNT(*) FROM information_schema.tables WHERE table_schema = 'public' AND table_name = 'title_basics';\" | grep -q '^[1-9]'; do
+          echo 'Waiting for data import to complete...'
+          sleep 5
+        done
+        
+        echo 'Waiting for data to be imported...'
+        until psql -h $$DB_HOST -p $$DB_PORT -U $$DB_USER -d $$DB_NAME -c \"SELECT COUNT(*) FROM title_basics LIMIT 1;\" | grep -q '^[1-9]'; do
+          echo 'Waiting for data import to start...'
+          sleep 10
+        done
+        
+        echo '✅ Database is ready with imported data!'
+      "
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - default
+
   db:
     image: postgres:15
     container_name: imdb-db
@@ -90,8 +125,9 @@ services:
       DB_USER: imdb
       DB_PASSWORD: imdb
     depends_on:
-      db:
-        condition: service_healthy
+      wait-for-data:
+        condition: service_completed_successfully
+    restart: unless-stopped
 
   frontend:
     image: 1rptr1/imdb-frontend:latest
@@ -114,8 +150,9 @@ services:
       DB_USER: imdb
       DB_PASSWORD: imdb
     depends_on:
-      backend:
-        condition: service_started
+      wait-for-data:
+        condition: service_completed_successfully
+    restart: unless-stopped
 
 volumes:
   postgres_data:
