--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,19 +79,26 @@ services:
       retries: 5
 
   backend:
-    build: ./Backend
+    build:
+      context: ./Backend
+      dockerfile: Dockerfile
     container_name: imdb-backend
-    ports:
-      - "8080:8080"
     environment:
+      PORT: 3001
       DB_HOST: db
       DB_PORT: 5432
       DB_NAME: imdb
       DB_USER: imdb
       DB_PASSWORD: imdb
+      QUERY_TIMEOUT_SECONDS: 10
+    ports:
+      - "8080:8080"
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - imdb-network
+    restart: unless-stopped
 
   frontend:
     build: ./Frontend
@@ -114,8 +121,11 @@ services:
       DB_USER: imdb
       DB_PASSWORD: imdb
     depends_on:
-      backend:
-        condition: service_started
+      db:
+        condition: service_healthy
+    networks:
+      - imdb-network
+    restart: unless-stopped
 
 volumes:
   postgres_data:
